# kego

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  fleet.toml  kego.toml  pyproject.toml
.cursor/rules/: rule-project-stanford.mdc
cluster/: Makefile  pyproject.toml
cluster/scripts/: check-ray-ports.sh  promote.py  train_logs.py
competitions/ai-masters-fraud-detection/: README.md  explore.py  pyproject.toml  train_baseline.py
competitions/birdclef-2026/: PLAN.md  README.md  analyze_data.py  benchmark_inference.py  convert_to_openvino.py  eval_oof.py  kaggle_inference.ipynb  kaggle_perch_cache_test.ipynb  kaggle_perch_inference.ipynb  kego.toml  kernel-metadata.json  kernel-perch-metadata.json  perch_cache_soundscapes.py  perch_cache_train_clips.py  precompute_specs.py  predict.py  pseudo_label_perch.py  pseudo_label_self.py  pyproject.toml  research-protossm.md  train.py  train_perch_probes.py
competitions/birdclef-2026/archive/: predict.py  pseudo_label_birdnet.py  pseudo_label_perch.py  pseudo_label_self.py  train_perch_probes.py
competitions/birdclef-2026/data/: perch_cache_soundscapes.py  perch_cache_train_clips.py  precompute_specs.py  pseudo_label_cnn_soft.py
competitions/birdclef-2026/eda/: analyze_data.py  eda.ipynb
competitions/birdclef-2026/eval/: benchmark_inference.py  calibrate_blend_alpha.py  calibrate_perch_temps.py  eval_local_calibration.py  eval_loso.py  eval_oof.py  eval_protossm_pipeline.py  eval_pseudo_val.py  eval_sc_cmap_all.py  test_pooling_logic.py  tune_perch_smoothing.py
competitions/birdclef-2026/inference/: birdclef-2026-perch-v2-inference.ipynb  convert_to_onnx.py  convert_to_openvino.py  kaggle_blend_inference.ipynb  kaggle_blend_onnx_inference.ipynb  kaggle_blend_v2_inference.ipynb  kaggle_blend_v3_inference.ipynb  kaggle_blend_v4_inference.ipynb  kaggle_inference.ipynb  kaggle_parallel_bench.ipynb  kaggle_perch_cache_test.ipynb  kaggle_perch_inference.ipynb  kaggle_perch_onnx_bench.ipynb  kaggle_perch_tflite_test.ipynb  kaggle_perch_v2_inference.ipynb  kernel-blend-metadata.json  kernel-blend-onnx-metadata.json  kernel-blend-v2-metadata.json  kernel-metadata.json  kernel-perch-v2-metadata.json  kernel-tflite-test-metadata.json
competitions/birdclef-2026/research/: research-backbones.md  research-lit.md  research-local-eval.md  research.md
competitions/birdclef-2026/training/: extend_perch_cache.py  precompute_aves_bio_embeddings.py  precompute_aves_embeddings.py  precompute_clap_zeroshot.py  precompute_coral.py  precompute_diel_priors.py  precompute_perch_soundscapes.py  precompute_pretrain_specs.py  precompute_probe_scores.py  precompute_site_profiles.py  pretrain_cnn.py  train_cnn.py  train_perch_adapter.py  train_perch_probes_v2.py  train_protossm.py  train_pseudo_stage2.py
competitions/cafa/: README.md  data-exploration.ipynb  protein_func_torch_polars.py  pyproject.toml
competitions/playground/: FEATURES.md  Makefile  PLAN.md  README.md  ablate_original_data.py  analyze_disagreement.py  analyze_ensemble.py  benchmark_models.py  compare_stacking.py  explore_s6e2.py  kego.toml  pyproject.toml  research_features.py  select_features.py  soft_pseudo_labels.py  test_features_local.py  train_s6e2_baseline.py
competitions/playground-series-s5e9/: playground-series-s5e9-data-exploration.ipynb  pyproject.toml
competitions/playground/quantum/: USAGE.md  debug_rimay_execution.py  pyproject.toml  quantum_features.py  quantum_rimay_workflow.py  reproduce-connection.py  rimay-bug-report.md  test_quantum_features.py  test_rimay.ipynb
competitions/playground/scripts-cluster/: check-ray-ports.sh  promote.py  setup-ray-worker.sh  test_cluster.py  train_logs.py
competitions/playground/slides/: Makefile  generate_plots.py  slides.md
competitions/rogii-wellbore-geology-prediction/: .gitignore  README.md  _inference_main.py  build_kernel.sh  explore_data.py  kego.toml  kernel-metadata.json  main.py  precompute.py  pyproject.toml  rogii_features.py  train_rogii.py  train_seq.py  train_seq_feats.py  tune_ensemble_blend.py  tune_optuna_reg.py  tune_postprocess.py  tune_pp_blend.py  tune_pp_consensus.py
competitions/stanford/: pyproject.toml  (+3 more)
kego/: checks.py  constants.py  debug.py  dispatch.py  encoder.py  fleet.py  imports.py  lists.py  math.py  normalize.py  parallelize.py  pipeline.py  timing.py  train.py  trainer.py  training_resume.py  utils.py
legacy/: old.pyproject.toml
mlframework/: __init__.py  checks.py  constants.py  lists.py  split.py
notebooks/: test.ipynb
notebooks/ariel-2025/: ariel-data-exploration.ipynb  ariel-training-simple.ipynb  pyproject.toml
notebooks/cafa/: Makefile  README.md  data-exploration.ipynb  justfile  protein_func_torch_polars.py  pyproject.toml
notebooks/nfl-big-data-bowl-2026-prediction/: nfl-data-exploration.py  pyproject.toml
notebooks/openaitoz/: discovered_sources.ipynb  download_copernicus_data.ipynb  migration_from_scihub_guide.ipynb  pyproject.toml
notebooks/playground/: PLAN.md  README.md  analyze_disagreement.py  analyze_ensemble.py  benchmark_models.py  compare_stacking.py  explore_s6e2.py  pyproject.toml  research_features.py  select_features.py  soft_pseudo_labels.py  submit_s6e2.sh  test_features_local.py  train_s6e2_baseline.py
notebooks/playground-series-s5e9/: Makefile  main.py  playground-series-s5e9-data-exploration.ipynb  pyproject.toml
notebooks/playground/slides/: package.json
scripts/: check-ray-ports.sh  fun_with_bash.sh  kego-completion.bash  setup-ray-worker.sh  setup_new_machine.sh  train_logs.py
slides/: Makefile  generate_plots.py  slides.md
tests/: conftest.py  test_cli.py  test_dispatch.py  test_ensemble.py  test_fleet.py  test_league.py  test_model_wrappers.py  test_new_commands.py  test_outbox.py  test_pokemon_agents.py  test_pokemon_decks.py  test_pokemon_edge_cases.py  test_pokemon_mcts.py  test_pokemon_mcts_golden.py  test_pokemon_mcts_search.py  test_preprocessing.py  test_registry.py  test_selection.py  test_submit.py  test_submit_leader.py  test_timing.py  test_tracking.py  test_training_resume.py  test_utils.py
(+239 files in other folders)
