[project]
name = "kego"
version = "0.7.0"
description = "Helpers for quick ML analysis of kaggle competitions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kaggle>=1.6.6",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.4",
    "polars>=1.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "lightgbm>=4.0.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes (includes F63, F7, F82 you had in flake8)
    "I",     # isort
    "UP",    # pyupgrade — modernize syntax
    "S",     # bandit — security checks (AI often generates eval/exec/shell=True)
    "B",     # flake8-bugbear — common bug patterns
    "SIM",   # flake8-simplify — simplifiable constructs
    "TRY",   # tryceratops — exception anti-patterns
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line length handled by formatter
    "S101",    # allow assert in non-test code (common in ML scripts)
    "TRY003",  # allow long exception messages
]

[tool.ruff.lint.per-file-ignores]
"competitions/**/*.py" = ["S"]  # relax security checks in competition scripts
"tests/**/*.py" = ["S101"]      # allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["kego"]

[tool.ruff.format]
docstring-code-format = true

[tool.uv.workspace]
members = [
    "competitions/playground-series-s5e9",
    "competitions/playground",
    "competitions/cafa",
    ".",
    "competitions/nfl-big-data-bowl-2026-prediction",
]
