[project]
name = "kego"
version = "0.7.0"
description = "Helpers for quick ML analysis of kaggle competitions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kaggle>=1.6.6",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.4",
    "polars>=1.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "lightgbm>=4.0.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes (includes F63, F7, F82 you had in flake8)
    "I",     # isort
    "UP",    # pyupgrade — modernize syntax
    "S",     # bandit — security checks (AI often generates eval/exec/shell=True)
    "B",     # flake8-bugbear — common bug patterns
    "SIM",   # flake8-simplify — simplifiable constructs
    "TRY",   # tryceratops — exception anti-patterns
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line length handled by formatter
    "E741",    # ambiguous variable names (l, O — common in ML/math code)
    "S101",    # allow assert in non-test code (common in ML scripts)
    "B905",    # zip() without strict= (too noisy, rarely a real bug)
    "TRY003",  # allow long exception messages
    "RUF012",  # mutable class defaults (common pattern in dataclasses/configs)
    "SIM102",  # nested if — sometimes clearer than single if with and
    "SIM108",  # ternary operator — multi-line if/else often more readable
    "SIM101",  # merged isinstance — less readable when checking different categories
    "SIM103",  # return condition directly — if/else sometimes clearer
    "B027",    # empty __init__ in ABC without abstract — intentional pattern
]

[tool.ruff.lint.per-file-ignores]
# Legacy competition code — relax rules to avoid blocking commits
"competitions/**/*.py" = [
    "S", "B", "SIM", "TRY", "RUF",
    "E402",   # import not at top (sys.path manipulation)
    "E741",   # ambiguous variable names (l, O, I — common in ML)
    "F821",   # undefined names (notebook cell ordering)
    "F841",   # unused local variables (iterative scripts)
]
"competitions/**/*.ipynb" = [
    "S", "B", "SIM", "TRY", "RUF",
    "E402", "E741",
    "F401",   # unused imports (notebook exploration)
    "F821",   # undefined names (cell ordering)
    "W291", "W293",  # whitespace in notebooks
]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["kego"]

[tool.ruff.format]
docstring-code-format = true

[tool.uv.workspace]
members = [
    "competitions/playground-series-s5e9",
    "competitions/playground",
    "competitions/cafa",
    ".",
    "competitions/nfl-big-data-bowl-2026-prediction",
]
