[project]
name = "birdclef-2026"
version = "0.1.0"
description = "BirdCLEF+ 2026 — multilabel bird species classification from Pantanal soundscapes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kego",
    "torch>=2.0",
    "torchaudio",
    "timm",
    "librosa",
    "soundfile",
    "pandas",
    "numpy",
    "scikit-learn",
    "audiomentations",
    "wandb",
    "tensorflow",
    "tensorflow-hub",
    "birdnetlib",
]

[tool.uv.sources]
kego = { workspace = true }
