[project]
name = "cafa"
version = "0.1.0"
description = "cafa"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.85",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "kego",
    "nbconvert>=7.16.6",
    "obonet>=1.1.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]


[tool.black]
line-length = 79

[tool.uv.sources]
kego = { workspace = true }

[dependency-groups]
dev = ["pre-commit>=4.1.0"]
