[project]
name = "playground-series-s5e9"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "kego",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[tool.black]
line-length = 79

[tool.uv.sources]
kego = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
