[project]
name = "rogii-wellbore-geology-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.12"
dependencies = [
    "kego",
    "torch>=2.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    "numba>=0.59",
]

[tool.uv.sources]
kego = { workspace = true }

[tool.ruff]
line-length = 120
