[project]
name = "stanford"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "kego",
    "polars>=1.25.2",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "torch>=2.6.0",
]

[tool.uv.sources]
kego = { path = "../../", editable = true }
