[project]
name = "openaitoz"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.26",
    "contextily>=1.6.2",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "kego",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "plotly>=6.1.2",
    "polars>=1.25.2",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.5",
    "rasterio>=1.4.3",
    "sentinelhub>=3.11.1",
]

[tool.uv.sources]
kego = { path = "../../", editable = true }
