[project]
name = "playground-series-s5e9"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "kego",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
]

[tool.black]
line-length = 79

[tool.uv.sources]
kego = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "altair>=5.5.0",
    "ipykernel>=6.30.0",
    "jupyter-server>=2.17.0",
    "jupyterlab-lsp>=5.2.0",
    "pre-commit>=4.1.0",
    "python-lsp-server[all]>=1.13.1",
    "uv>=0.8.19",
    "uvicorn>=0.36.0",
    "vegafusion[embed]>=2.0.2",
    "vl-convert-python>=1.8.0",
]
