[project]
name = "playground"
version = "0.1.0"
description = "Playground Series Kaggle competitions"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "kego",
    "pre-commit>=4.2.0",
    "catboost>=1.2.0",
    "kaggle>=1.8.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "pytabkit>=1.0.0",
    "torch>=2.0.0",
    "rtdl-revisiting-models>=0.0.2",
    "skorch>=0.15.0",
]

[tool.uv.sources]
kego = { workspace = true }
